# scrabble-utils

./: Cargo.toml  README.md  riddler_2019-06-28.md
src/lib/: lib.rs
src/riddler_2019_06_28/: main.rs
