[package]
name = "scrabble-utils"
version = "0.0.0"
authors = ["Craig M. Brandenburg <c.m.brandenburg@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
rand = "0.7"

[lib]
name = "scrabble"
path = "src/lib/lib.rs"

[[bin]]
name = "riddler_2019_06_28"
path = "src/riddler_2019_06_28/main.rs"
